// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Loader Check snapshots should renders correctly 1`] = `null`;

exports[`Consonant/Loader Check snapshots should renders correctly 2`] = `
<div
  className="consonant-loader  "
  data-testid="consonant-loader"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 3`] = `
<div
  className="consonant-loader consonant-loader_medium "
  data-testid="consonant-loader"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 4`] = `
<div
  className="consonant-loader consonant-loader_big "
  data-testid="consonant-loader"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 5`] = `
<div
  className="consonant-loader consonant-loader_medium consonant-loader_absolute"
  data-testid="consonant-loader"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 6`] = `
<div
  className="consonant-loader consonant-loader_big consonant-loader_absolute"
  data-testid="consonant-loader"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;
